--- a/ps4debug.html
+++ b/ps4debug.html
@@ -32,7 +32,7 @@ function done()
 
 window.midExploit = function()
 {
-    preloadScripts(['755.js', '755jb.js', 'mira.js', 'renamer.js', 'cod.js'], go);
+    preloadScripts(['755.js', '755jb.js', 'mira.js', 'ps4debug.js', 'cod.js'], go);
 }
 
 window.postExploit = function()
