--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html manifest="offline.manifest"><body background="7xx"/><img class="center" src=></a><link rel="stylesheet prefetch" href="Style.css">    
+<html manifest="1offline.manifest"><body background="7xx"/><img class="center" src=></a><link rel="stylesheet prefetch" href="Style.css">    
 <h1 align="center"><div id="ScrOverlay" class="cacheUPDbg"><pre id="cacheUPDtxt" class="cacheUPD"></pre><div id="CacheProgress"><div id="CacheBar"></div></div></div>
 <script>
 function DLProgress(e){
