--- a/natIvecaller132.html
+++ b/natIvecaller132.html
@@ -1,4 +1,5 @@
 <html>
+</head>
 <style>
 body{color: white; background-image:url(WOLF.jpg); background-attachment:fixed; background-size:100%; background-repeat:no-repeat;}
 </style>
