--- a/goldhen755.html
+++ b/goldhen755.html
@@ -1,4 +1,4 @@
-<html>
+<html></head>
 <style>
 body{color: white; background-image:url(WOLF.jpg); background-attachment:fixed; background-size:100%; background-repeat:no-repeat;}
 </style>
